src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-366.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=:60\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=:60"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: ":60"
              loc: "incab=:60"
              locs:
                correction: ":60"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMINUTESOUTOFRANGE
    loc: "60"
    message: Minutes out of range
    severity: Error
