src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-367.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=::59\")"
---
items:
  - loc: "#units incab=::59"
    locs:
      directive: "#units"
    options:
      - correction:
          locs:
            degrees: ""
            minutes: ""
            seconds: "59"
          seconds: 59
          unit: Degrees
          value: 0.016388888888888887
        loc: "incab=::59"
        locs:
          correction: "::59"
          option: incab
        option: BacksightAzimuthCorrection
    type: UnitsDirective
