src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-372.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=3::\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=3::"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "3::"
              loc: "incab=3::"
              locs:
                correction: "3::"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGSECONDS
    loc: ""
    message: Missing seconds
    severity: Error
