src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-373.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=:\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=:"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: ":"
              loc: "incab=:"
              locs:
                correction: ":"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGMINUTES
    loc: ""
    message: Missing minutes
    severity: Error
