src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-38.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units s=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units s="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: s
              option: SecondaryDistanceUnit
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing length unit
    severity: Error
